# airflow_data_pipeline

./: .pre-commit-config.yaml  docker-compose.yaml  pyproject.toml
airflow/: docker-compose.yaml
app/: api-spotify.py  main.py
app/pipeline/: extract.py  load.py  transform.py
