[tool.poetry]
name = "etl-orchestration-spotify"
version = "0.1.0"
description = "Spotify API Pipeline Orchestration with Airflow"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.0"
pandas = "^2.1.4"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
