[tool.poetry]
name = "etl-orchestration-spotify"
version = "0.1.0"
description = "Spotify API Pipeline Orchestration with Airflow"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.0"
pandas = "^2.1.4"
python-dotenv = "^1.0.0"
httpx = "^0.26.0"
pytest = "^7.4.4"
isort = "^5.13.2"
black = "^24.1.1"
pip-audit = "^2.7.0"
taskipy = "^1.12.2"
pre-commit = "^3.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"
known_third_party = []


[tool.taskipy.tasks]
format = "isort . && black ."
test = "pytest -v"
